# media-asistente

./: .gitignore  README.md  despertador_comando.json  despertador_cron.json  despertador_cron2.json  flujo.json  media files.txt  pyproject.toml
app/: auth.py  config.py  llm.py  main.py  music.py  player.py
deploy/: media-api.service
