[project]
name = "media-asistente"
version = "0.1.0"
description = "Media asistente con IA para Raspberry Pi"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "anthropic>=0.40",
    "ytmusicapi>=1.8",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.7",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"